# charliehustle

./: .gitignore  LICENSE  README.md  Untitled  build.py  games.py  main.py  pick.py  pyproject.toml  simulate.py  test.py
data/: games.py  pitchers.py
data/2010/teams/: ARI_2010_data.csv  ATL_2010_data.csv  BAL_2010_data.csv  BOS_2010_data.csv  CHC_2010_data.csv  CIN_2010_data.csv  CLE_2010_data.csv  COL_2010_data.csv  CWS_2010_data.csv  DET_2010_data.csv  HOU_2010_data.csv  KC_2010_data.csv  LAA_2010_data.csv  LAD_2010_data.csv  MIA_2010_data.csv  MIL_2010_data.csv  MIN_2010_data.csv  NYM_2010_data.csv  NYY_2010_data.csv  OAK_2010_data.csv  PHI_2010_data.csv  PIT_2010_data.csv  SD_2010_data.csv  SEA_2010_data.csv  SF_2010_data.csv  STL_2010_data.csv  TB_2010_data.csv  TEX_2010_data.csv  TOR_2010_data.csv  WSH_2010_data.csv
data/2011/games/: 2011_games_data.csv
data/2011/teams/: ARI_2011_data.csv  ATL_2011_data.csv  BAL_2011_data.csv  BOS_2011_data.csv  CHC_2011_data.csv  CIN_2011_data.csv  CLE_2011_data.csv  COL_2011_data.csv  CWS_2011_data.csv  DET_2011_data.csv  HOU_2011_data.csv  KC_2011_data.csv  LAA_2011_data.csv  LAD_2011_data.csv  MIA_2011_data.csv  MIL_2011_data.csv  MIN_2011_data.csv  NYM_2011_data.csv  NYY_2011_data.csv  OAK_2011_data.csv  PHI_2011_data.csv  PIT_2011_data.csv  SD_2011_data.csv  SEA_2011_data.csv  SF_2011_data.csv  STL_2011_data.csv  TB_2011_data.csv  TEX_2011_data.csv  (+2 more)
data/test/: mlb_test.csv
data/train/: mlb_train.csv
src/charliehustle/: __init__.py  cli.py  config.py  viz.py
tests/: test_features.py  test_odds.py
(+195 files in other folders)
